--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -46,7 +46,7 @@
             color $color-darkcoral
 
     &--black
-        background-color $color-black
+        background-color $color-smokyblack
         color $color-snow
         border-color $color-smokyblack
 
@@ -91,7 +91,7 @@
         display block
         text-align center
         width 100%
-        
+
     &--callback
         padding 8px
         display block
@@ -100,8 +100,6 @@
         font-size 20px
         font-family 'Panton'
         border-radius 0
-
-
 
 .ui-circle-button
     height 100%
@@ -143,3 +141,20 @@
             bottom 14px
             right 15px
             font-size 26px
+
+.ui-quarter-button
+    font-family 'Fira Sans'
+    height 100%
+    width 100%
+    background #000
+    font-size 50px
+    color #fff
+    align-items center
+    justify-content center
+    display flex
+    line-height 22px
+    padding 50px
+    cursor pointer
+
+    &:hover
+        color #fff
