--- a/frontend/src/_styles/modules/product-cart.styl
+++ b/frontend/src/_styles/modules/product-cart.styl
@@ -42,3 +42,29 @@
 
     &__time
         padding 0 79px 20px 30px
+
+.ui-product-cart-mini
+    font-family 'Panton'
+    font-size 17px
+    color #fff
+    line-height 22px
+    font-weight bold
+    display flex
+    justify-content space-between
+
+    &__link
+        width 122px
+
+    &__info
+        width 100%
+        position relative
+
+    &__title
+        position absolute
+        top 20px
+        left 20px
+
+    &__price
+        position absolute
+        bottom 20px
+        left 20px
