--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -19,6 +19,7 @@ head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(href="https://fonts.googleapis.com/css?family=Scada:400,400i,700,700i" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Rubik:400,500,700" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Fira+Sans&amp;subset=cyrillic" rel="stylesheet")
     
     block stylesheets
         link(rel='stylesheet', href= baseUrl + 'styles/main.css')
