--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -15,7 +15,7 @@
 @import 'modules/text';
 @import 'modules/text-box';
 @import 'modules/material-box';
-@import 'modules/product-cart-small';
+@import 'modules/product-cart';
 
 @import 'grid/mixins/helpers'
 @import 'grid/mixins/grid-framework'
@@ -486,7 +486,7 @@ init($breakpoints, $columns)
 .ui-advantage
     display block
     margin-top 60px
-    
+
     & .col
         transition width .2s ease
         cursor pointer
@@ -494,27 +494,27 @@ init($breakpoints, $columns)
         &:hover
             width 50%
             flex none
-            
+
             & ^[0]__content
                 padding 17px 79px 17px 42px
                 width 100%
                 height auto
                 visibility visible
-                
+
             & ^[0]__item
                 background #009ba4
                 color #fff
-                
+
             & ^[0]__header
                 border-color #fff
-                
+
             & ^[0]__icon
                 border-color #fff
-                
+
                 svg
                     color #fff
                     fill #fff
-                
+
             & ^[0]__text
                 display block
                 height 100%
@@ -529,7 +529,7 @@ init($breakpoints, $columns)
         padding 10px 0
         align-items center
         justify-content center
-        
+
     &__header
         font-size 26px
         line-height 22px
@@ -547,24 +547,24 @@ init($breakpoints, $columns)
         display flex
         align-items center
         justify-content center
-        
+
         svg
             color $color-darkcoral
             fill $color-darkcoral
-        
+
     &__link
         width 79px
         height 79px
         position absolute
         bottom 0
         right 0
-        
+
     &__content
         padding 0
         width 0
         overflow hidden
         visibility hidden
-        
+
     &__text
         display none
         overflow hidden
