--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -652,3 +652,11 @@ init($breakpoints, $columns)
 
 .ui-main-home
     background url('/images/main-home-bg.png') no-repeat 50% 50%
+
+.ui-catalog
+
+    &__header
+        padding 30px 0
+
+    &__line
+        padding 15px 0
