--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -131,6 +131,10 @@
         &:before
             background-color $color-darkcoral
 
+    &--grey
+        &:before
+            background-color $color-ashgrey
+
     &--size-lg
         i
             bottom 15px
