--- a/frontend/src/_styles/modules/heading.styl
+++ b/frontend/src/_styles/modules/heading.styl
@@ -5,6 +5,11 @@
 	&--white
 		color $color-snow
 
+	&--black
+		color #1c282a
+		font-weight bold
+		text-transform uppercase
+
 	&--lvl2
 		font-family 'Panton'
 		font-size 40px
