--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -1,5 +1,8 @@
 extends _layouts/base
 
+block config
+  - var baseUrl = './'
+
 block content
     .ui-catalog-interactives
         .grid.grid--container
