--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -11,6 +11,7 @@ $color-bondiblue = #009ba4
 $color-pagination = #f6f6f6
 $color-dark = #212121
 $color-medium = #313131
+$color-ashgrey = #b8b8b8
 
 $breakpoints = {
   'xs' :  0,
