form page catalog, page configurations

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -51,7 +51,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="/catalog/") Каталог
                       .ui-menu__item
-                          a.ui-menu__link(href="") Конфигурации
+                          a.ui-menu__link(href="/configurations/") Конфигурации
                       .ui-menu__item
                           a.ui-menu__link(href="") Сервис
                       .ui-menu__item
