--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -1,7 +1,46 @@
 .ui-input
     background-color #f5f5f5
     border-radius 3px
-    padding 7px 18px
+    padding 14px 34px
+    height 48px
     font-size 16px
     outline 0
     border 0
+
+.ui-form
+    background $color-dark
+    box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+    font-family 'Rubik'
+    color #fff
+
+.ui-form-calcalate
+    display flex
+    align-items center
+    padding 35px 0 35px 24px
+
+    &__title
+        font-size 26px
+        line-height 32px
+        padding-bottom 27px
+
+    &__layout
+        display flex
+        align-items center
+        justify-content space-between
+
+    &__about
+        display flex
+        align-items center
+        padding-top 25px
+
+    &__text
+        padding-left 16px
+
+    &__icon
+        border 1px solid #fff
+        border-radius 50%
+        width 31px
+        height 31px
+        display flex
+        align-items center
+        justify-content center
