--- a/frontend/src/catalog/index.jade
+++ b/frontend/src/catalog/index.jade
@@ -97,3 +97,20 @@ block content
                         .ui-product-cart__link
                             a.ui-circle-button.ui-circle-button--grey.ui-circle-button--size-md(href="#")
                                 i +
+    .ui-price-calculate
+        .grid.grid--container
+            .row
+                .col.col--xl-12
+                    form.ui-form.ui-form-calcalate
+                        .ui-form-calcalate__header
+                            .ui-form-calcalate__title Узнать стоимость
+                            .ui-form-calcalate__description Вы можете получить расчет стоимости в течение 1-2 часов
+                        .col.col--xl-9
+                            .ui-form-calcalate__content
+                                .ui-form-calcalate__layout
+                                    input.ui-input(type="text", placeholder="Контактное лицо")
+                                    input.ui-input(type="text", placeholder="Телефон")
+                                    a.ui-button.ui-button--size-lg.ui-button--default Расчитать стоимость
+                                .ui-form-calcalate__about 
+                                    .ui-form-calcalate__icon !
+                                    .ui-form-calcalate__text Также Вы можете получить моментальную консультацию по стоимости #[br]у нашего специалиста просто позвонив по номеру: (495) 663 18 81
