--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -16,6 +16,7 @@
 @import 'modules/text-box';
 @import 'modules/material-box';
 @import 'modules/product-cart';
+@import 'modules/configurations-cart';
 
 @import 'grid/mixins/helpers'
 @import 'grid/mixins/grid-framework'
@@ -660,3 +661,28 @@ init($breakpoints, $columns)
 
     &__line
         padding 15px 0
+
+.ui-price-calculate
+    padding 44px 0
+
+.ui-configurations
+    padding-bottom 50px
+
+    &__header
+        padding 30px 0
+
+    &__description
+        box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+        background $color-whitesmoke
+        font-family 'Panton'
+        font-size 16px
+        color #090909
+        line-height 20px
+        padding 43px 23px
+        margin-bottom 15px
+
+        ul
+            list-style none
+
+            li
+                padding-top 30px
