--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -66,6 +66,7 @@
             color $color-darkcoral
 
     &--pagination-prev
+        margin 0 40px
         background-color $color-pagination
         color $color-smokyblack
         border-color $color-pagination
@@ -77,6 +78,7 @@
             color $color-smokyblack
 
     &--pagination-next
+        margin 0 40px
         background-color $color-smokyblack
         color $color-pagination
         border-color $color-smokyblack
