--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -55,7 +55,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="") Сервис
                       .ui-menu__item
-                          a.ui-menu__link(href="") Проекты
+                          a.ui-menu__link(href="/projects/") Проекты
                       .ui-menu__item
                           a.ui-menu__link(href="") Цены
                       .ui-menu__item
