--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -13,6 +13,7 @@ $color-dark = #212121
 $color-medium = #313131
 $color-ashgrey = #b8b8b8
 $color-whitesmoke = #f6f6f6
+$color-darkjunglegreen = #282828
 
 $breakpoints = {
   'xs' :  0,
