--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -18,6 +18,7 @@
 @import 'modules/product-cart';
 @import 'modules/configurations-cart';
 @import 'modules/gallery-cart';
+@import 'modules/projects-cart';
 
 @import 'grid/mixins/helpers'
 @import 'grid/mixins/grid-framework'
@@ -713,3 +714,8 @@ init($breakpoints, $columns)
 
         span
             color $color-darkcoral
+
+.ui-projects
+
+    &__header
+        padding 30px 0
