--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -137,6 +137,10 @@
         &:before
             background-color $color-ashgrey
 
+    &--black
+        &:before
+            background-color $color-smokyblack
+
     &--size-lg
         i
             bottom 15px
