--- a/frontend/src/_styles/modules/product-cart.styl
+++ b/frontend/src/_styles/modules/product-cart.styl
@@ -75,11 +75,13 @@
 
     &:hover &__description
         background $color-bondiblue
+        transition all 0.45s ease-in-out
 
     &:hover &__link
         & .ui-circle-button
             &:before
                 background #250b09
+                transition all 0.45s ease-in-out
 
     &__title
         background-repeat no-repeat
