projects/history/detail/

--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -658,9 +658,6 @@ init($breakpoints, $columns)
 
 .ui-catalog
 
-    &__header
-        padding 30px 0
-
     &__line
         padding 15px 0
 
@@ -669,9 +666,6 @@ init($breakpoints, $columns)
 
 .ui-configurations
     padding-bottom 50px
-
-    &__header
-        padding 30px 0
 
     &__description
         box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
@@ -691,9 +685,6 @@ init($breakpoints, $columns)
 
 .ui-gallery
     padding-bottom 50px
-
-    &__header
-        padding 30px 0
 
 .ui-pagination
     padding 50px 0
@@ -715,7 +706,55 @@ init($breakpoints, $columns)
         span
             color $color-darkcoral
 
-.ui-projects
+.ui-page
 
     &__header
         padding 30px 0
+
+.ui-projects-history
+    padding-bottom 30px
+
+    &__text
+        box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+        background #f9f9f9
+        padding 26px 35px 8px 27px
+        font-family 'Panton'
+        font-size 16px
+        color #090909
+        line-height 20px
+
+    &__description
+        padding 25px 13px 30px 13px
+        line-height 26px
+        margin-bottom 107px
+
+    &__img
+        width 100%
+        height 100%
+        background-position 50% 50%
+        background-repeat no-repeat
+        background-size cover
+
+    &__line
+        padding 0 0 22px 0
+
+.ui-projects-history-cart
+    background $color-darkcoral
+    color $color-white
+    padding  27px 16px 23px 26px
+    font-family 'Panton'
+    line-height 26px
+    margin-bottom 15px
+    box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+
+    &__title
+        font-size 20px
+        padding-bottom 36px
+        font-weight bold
+
+    &__text
+        font-size 16px
+        font-weight bold
+
+        span
+            font-weight normal
