--- a/frontend/src/configurations/index.jade
+++ b/frontend/src/configurations/index.jade
@@ -8,7 +8,7 @@ block content
         .grid.grid--container
             .row
                 .col.col--xl-12
-                    .ui-configurations__header.ui-heading.ui-heading--lvl2.ui-heading--black конфигурации
+                    .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black конфигурации
                 .col.col--xl-12
                     .ui-configurations__description
                         p Мобильные перегородки для офиса – отличный способ разделить помещение (даже небольшое по площади) на рабочие зоны с помощью модулей. Возможна установка различных конфигураций. Особенно хороши для создания офисных рабочих мест перегородки высотой 105-165 см. Панели используются как тканевые, так и стеклянные. «Оки-Доки» в рамках зонирования рабочих мест предлагает вам следующие возможности:
