--- a/frontend/src/gallery/index.jade
+++ b/frontend/src/gallery/index.jade
@@ -8,7 +8,7 @@ block content
         .grid.grid--container
             .row
                 .col.col--xl-12
-                    .ui-gallery__header.ui-heading.ui-heading--lvl2.ui-heading--black фотогалерея
+                    .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black фотогалерея
             .row
                 .col.col--xl-3
                     .ui-gallery-cart(style="background-image: url('/images/gallery/1.png')")
