--- a/frontend/src/projects/index.jade
+++ b/frontend/src/projects/index.jade
@@ -8,7 +8,7 @@ block content
         .grid.grid--container
             .row
                 .col.col--xl-12
-                    .ui-projects__header.ui-heading.ui-heading--lvl2.ui-heading--black проекты компании
+                    .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black проекты компании
             .row
                 .col.col--xl-4
                     .ui-projects-cart
@@ -19,7 +19,7 @@ block content
                                 span 2 недели
                             .ui-projects-cart__text Компания «Оки-Доки» в сжатые сроки создала новый интерьер для офиса ЗАО Коммерческий банк...
                             .ui-projects-cart__link
-                                a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="#")
+                                a.ui-circle-button.ui-circle-button--black.ui-circle-button--size-md(href="/projects/history/detail/")
                                     i +
                 .col.col--xl-4
                     .ui-projects-cart
