--- a/frontend/src/catalog/index.jade
+++ b/frontend/src/catalog/index.jade
@@ -8,7 +8,7 @@ block content
         .grid.grid--container
             .row
                 .col.col--xl-12
-                    .ui-catalog__header.ui-heading.ui-heading--lvl2.ui-heading--black каталог
+                    .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black каталог
             .row.ui-catalog__line
                 .col.col--xl-4
                     .ui-product-cart
