--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -61,7 +61,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="") Направления
                       .ui-menu__item
-                          a.ui-menu__link(href="") О компании
+                          a.ui-menu__link(href="/about/") О компании
                       .ui-menu__item
                           a.ui-menu__link(href="") Дилерам
                       .ui-menu__item
