--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -45,3 +45,11 @@
         &:after
             top 31px
             height calc(100% - 20px)
+
+.ui-step-check
+    list-style none
+    padding 20px 0 20px
+
+    li
+        background url('/images/step-check.png') no-repeat 0 50%
+        padding 15px 0 15px 45px
