--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -608,7 +608,7 @@ init($breakpoints, $columns)
 
     &__specifications
         background $color-platinum
-        box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.2)
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.2)
         max-width 300px
 
 .ui-our-production-specifications
@@ -668,7 +668,7 @@ init($breakpoints, $columns)
     padding-bottom 50px
 
     &__description
-        box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
         background $color-whitesmoke
         font-family 'Panton'
         font-size 16px
@@ -715,7 +715,7 @@ init($breakpoints, $columns)
     padding-bottom 30px
 
     &__text
-        box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
         background #f9f9f9
         padding 26px 35px 8px 27px
         font-family 'Panton'
@@ -745,7 +745,7 @@ init($breakpoints, $columns)
     font-family 'Panton'
     line-height 26px
     margin-bottom 15px
-    box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
 
     &__title
         font-size 20px
@@ -758,3 +758,66 @@ init($breakpoints, $columns)
 
         span
             font-weight normal
+
+.ui-about
+    padding-bottom 30px
+
+    &__line
+        padding-bottom 30px
+
+    &__signing-up
+        font-family 'PantonRI'
+        font-size 20px
+        color #090909
+        line-height 26px
+        padding-top 40px
+
+.ui-about-photo
+    width 100%
+    height 100%
+    background-position 50% 50%
+    background-repeat no-repeat
+    background-size cover
+
+    &__text
+        background rgba(0, 0, 0, 0.5)
+        padding 28px 34px 16px
+        color #fff
+        font-family 'Panton'
+        font-size 16px
+        line-height 20px
+
+.ui-about-cart
+    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+    display flex
+    flex-direction column
+    height 100%
+
+    &__title
+        background $color-darkcoral
+        color #fff
+        font-family 'Panton'
+        font-size 26px
+        font-weight bold
+        line-height 32px
+        padding 23px 22px 25px
+
+        &--grey
+            background #f9f9f9
+            color #090909
+            padding-bottom 5px
+
+    &__text
+        padding 25px 22px 32px
+        background #f9f9f9
+        font-family 'Panton'
+        font-size 16px
+        color #090909
+        line-height 20px
+        height 100%
+
+    &__text-italic
+        font-family 'PantonRI'
+
+    &__text-big
+        font-size 20px
