--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -65,7 +65,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="") Дилерам
                       .ui-menu__item
-                          a.ui-menu__link(href="") Вопрос-ответ
+                          a.ui-menu__link(href="/faq/") Вопрос-ответ
                       .ui-menu__item
                           a.ui-menu__link(href="") Контакты
                     .col.col--xl-2.js-show-callback
