--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -53,3 +53,7 @@
     li
         background url('/images/step-check.png') no-repeat 0 50%
         padding 15px 0 15px 45px
+
+.ui-step
+    list-style none
+    padding 20px 0 20px
