--- a/frontend/src/about/index.jade
+++ b/frontend/src/about/index.jade
@@ -17,35 +17,35 @@ block content
                             p.
                                 Компания «ОКИ-ДОКИ» работает на рынке офисных перегородок и офисной мебели с 2000 г. и выполнила с начала деятельности несколько тысяч проектов. За время работы компания организовала собственное производство и сформировала штат опытных специалистов.
                 .col.col--xl-6
-                    .ui-about-cart
-                        .ui-about-cart__title Опыт
-                        .ui-about-cart__text
+                    .ui-text-block
+                        .ui-text-block__title Опыт
+                        .ui-text-block__text
                             p. 
                                 Мы сотрудничаем как с московскими компаниями, так и с регионами. 
                                 #[br]#[br]Продукция «ОКИ-ДОКИ» представлена в Тюмени, Нефтеюганске, Старом Осколе, Нижневартовске, Санкт-Петербурге, Минске, Хабаровске, Калуге, Ставрополе, Екатеринбурге, Уральске (Казахстан). 
                                 #[br]#[br]Стандарты нашей работы смогли оценить такие компании, как Майкрософт Айрлэнд Оперейшнз Лимитед, компания «Эльдорадо», инвестиционная компания «Тройка Диалог», Французский визовый центр, LG Electronics, ВТБ банк, Группа компаний «Русский стиль», Coral Travel, НПФ «Алмазная Осень». Мы гордимся, что работали с такими компаниями, как Рособоронэкспорт, ГУ МВД России, Российская газета, ЗАО «Очаково», Дом Правительства РФ, Автореал, Корал Тревел, Тройка Диалог, Транскредитбанк , ГФК «Русь», Комет.
             .row.ui-about__line
                 .col.col--xl-4  
-                    .ui-about-cart
-                        .ui-about-cart__title Комплексный подход
-                        .ui-about-cart__text  Важной отличительной чертой «ОКИ-ДОКИ» является комплексный подход к реализации проекта, а именно: 
+                    .ui-text-block
+                        .ui-text-block__title Комплексный подход
+                        .ui-text-block__text  Важной отличительной чертой «ОКИ-ДОКИ» является комплексный подход к реализации проекта, а именно: 
                             ul.ui-step-check
                                 li мобильные и стационарные офисные перегородки, 
                                 li сантехнические кабинки;
                                 li оперативная офисная мебель и кабинеты руководителей;
                                 li офисные кресла.
-                            .ui-about-cart__text-italic Помимо этого, в рамках стратегии по комплектации офисов «под ключ» мы дополняем свои планировки мягкой мебелью и офисными аксессуарами.
+                            .ui-about-block__text-italic Помимо этого, в рамках стратегии по комплектации офисов «под ключ» мы дополняем свои планировки мягкой мебелью и офисными аксессуарами.
                 .col.col--xl-4  
-                    .ui-about-cart
-                        .ui-about-cart__title Развитие
-                        .ui-about-cart__text
-                              .ui-about-cart__text-big Производимая нами продукция непрерывно совершенствуется и дополняется новыми возможностями и опциями, которые нам подсказывают наши же заказчики.#[br] #[br]
+                    .ui-text-block
+                        .ui-text-block__title Развитие
+                        .ui-text-block__text
+                              .ui-block-cart__text-big Производимая нами продукция непрерывно совершенствуется и дополняется новыми возможностями и опциями, которые нам подсказывают наши же заказчики.#[br] #[br]
                               p Отдел по работе с поставщиками постоянно проводит мониторинг рынка, выявляя новинки, интересные и полезные для наших клиентов.
-                              .ui-about-cart__text-italic #[br]Такой подход дает нам возможность быть в курсе новых тенденций офисного дизайна и создавать максимально эффективные и современные офисные интерьеры.
+                              .ui-text-block__text-italic #[br]Такой подход дает нам возможность быть в курсе новых тенденций офисного дизайна и создавать максимально эффективные и современные офисные интерьеры.
                 .col.col--xl-4  
-                    .ui-about-cart
-                        .ui-about-cart__title Эффективность
-                        .ui-about-cart__text Выполненные нами заказы- это самое ценное, что у нас есть. Поэтому наши организационные усилия направлены на то, чтобы:
+                    .ui-text-block
+                        .ui-text-block__title Эффективность
+                        .ui-text-block__text Выполненные нами заказы- это самое ценное, что у нас есть. Поэтому наши организационные усилия направлены на то, чтобы:
                             ul.ui-step-check
                                 li общение с нашими менеджерами было для вас приятным и содержательным процессом;
                                 li монтажные работы по обновлению и улучшению вашего офиса не нарушили рабочий ритм вашей организации;
@@ -53,9 +53,9 @@ block content
                                 li все работы по выполнению заказа проводились качественно и в срок.
             .row
                 .col.col--xl-12
-                    .ui-about-cart
-                        .ui-about-cart__title.ui-about-cart__title--grey Достижения
-                        .ui-about-cart__text "ОКИ-ДОКИ" сейчас- это:
+                    .ui-text-block
+                        .ui-text-block__title.ui-text-block__title--grey Достижения
+                        .ui-text-block__text "ОКИ-ДОКИ" сейчас- это:
                             ul.ui-step-check
                                 li Постоянно развивающаяся компания;
                                 li Сплоченная команда опытных специалистов;
