--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -19,6 +19,7 @@
 @import 'modules/configurations-cart';
 @import 'modules/gallery-cart';
 @import 'modules/projects-cart';
+@import 'modules/text-block';
 
 @import 'grid/mixins/helpers'
 @import 'grid/mixins/grid-framework'
@@ -778,6 +779,7 @@ init($breakpoints, $columns)
     background-position 50% 50%
     background-repeat no-repeat
     background-size cover
+    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
 
     &__text
         background rgba(0, 0, 0, 0.5)
@@ -787,37 +789,12 @@ init($breakpoints, $columns)
         font-size 16px
         line-height 20px
 
-.ui-about-cart
-    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
-    display flex
-    flex-direction column
-    height 100%
+.ui-page-faq
 
-    &__title
-        background $color-darkcoral
-        color #fff
-        font-family 'Panton'
-        font-size 26px
-        font-weight bold
-        line-height 32px
-        padding 23px 22px 25px
-
-        &--grey
-            background #f9f9f9
-            color #090909
-            padding-bottom 5px
-
-    &__text
-        padding 25px 22px 32px
-        background #f9f9f9
-        font-family 'Panton'
-        font-size 16px
-        color #090909
-        line-height 20px
+    &__photo
+        width 100%
         height 100%
-
-    &__text-italic
-        font-family 'PantonRI'
-
-    &__text-big
-        font-size 20px
+        background-position 50% 50%
+        background-repeat no-repeat
+        background-size cover
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
