--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -34,6 +34,10 @@
         line-height 20px
         height 100%
 
+        a
+            color $color-darkcoral
+            text-decoration underline
+
     &__text-italic
         font-family 'PantonRI'
 
