--- a/frontend/src/faq/index.jade
+++ b/frontend/src/faq/index.jade
@@ -19,17 +19,35 @@ block content
                   .col.col--xl-12
                       .ui-text-block
                           .ui-text-block__title.ui-text-block__title--grey.ui-text-block__title--small О перегородках
-                          .ui-text-block__text
                               ul.ui-faq
                                   li 
                                       a.ui-faq + Что означает «Оки-Доки»?
                                       .ui-showfaq Все будет хорошо! Согласен делать хорошо! Все хорошо!
                                   li 
                                       a + Чем отличаются мобильные перегородки от стационарных? Какие перегородки дешевле?
+                                      .ui-showfaq 
+                                          a Мобильные перегородки
+                                          &nbsp изготавливаются в соответствии с указанными размерами на заводе и уже в готовом виде их привозят на заказ. Остается только их установить в соответствии с дизайн - проектом. 
+                                          a &nbsp Стационарные перегородки
+                                          &nbsp только комплектуются на складе, монтаж при этом более сложный и трудоемкий.  Однозначного ответа на вопрос: «Что дешевле?»- нет. Цена зависит от многих факторов. Необходимо сделать расчет.
                                   li 
                                       a + Есть ли гарантия?
                                   li 
                                       a + Какие возможны цвета офисных перегородок?
                                   li 
                                       a + Какие виды остекления?
+                                  li
+                                      a + Какова звукоизоляция?
+                                  li
+                                      a + В чем плюсы обивки тканью?
+                                  li
+                                      a + Можно ли дополнить конфигурацию, переделать, взять с собой при переезде, сменить ткань обивки?
+                                  li
+                                      a + Возможны ли нестандартные конфигурации, размеры офисных перегородок?
+                                  li
+                                      a + Насколько устойчива конструкция?
+                                  li
+                                      a + Можно ли доукомплектовать проект дополнительной мебелью?
+                                  li
+                                      a + Где можно посмотреть и «пощупать» продукцию «Оки-Доки»?
                                   
