--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -798,3 +798,17 @@ init($breakpoints, $columns)
         background-repeat no-repeat
         background-size cover
         box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+
+.ui-showfaq
+    display none
+    background #444
+    color #fff
+    padding 22px 123px 23px 18px
+    font-family 'Panton'
+    font-size 16px
+    line-height 20px
+    margin 7px 0 7px 7px
+    font-weight normal
+
+    a
+        font-weight normal
