--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -54,6 +54,17 @@
         background url('/images/step-check.png') no-repeat 0 50%
         padding 15px 0 15px 45px
 
-.ui-step
+.ui-faq
     list-style none
-    padding 20px 0 20px
+    font-family 'Panton'
+    font-size 16px
+    color #4f4f4f
+    text-align left
+    line-height 36px
+
+    li
+        a
+            cursor pointer
+
+            &:hover
+                color $color-darkcoral
